--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
 
                     <!--include layout="@layout/activity_formulario_add_animal" /-->
                     <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     <Button
                         android:id="@+id/btnAgregarMascota"
