--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,11 @@
         <item name="fontFamily">@font/coolveticarg</item>
     </style>
 
+    <style name="AppTheme.TemaPopup" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:fontFamily">@font/coolveticarg</item>
+    </style>
+
 </resources>
