--- a/app/src/main/res/layout/activity_formulario_add_animal.xml
+++ b/app/src/main/res/layout/activity_formulario_add_animal.xml
@@ -4,73 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E0E0E0"
     tools:context=".FormularioAddAnimal">
 
 
-    <TextView
-        android:id="@+id/tituloPropietario"
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:id="@+id/contenedor"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:layout_marginRight="206dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/cajat"
-        android:padding="5dp"
-        android:text="Agregar Mascota"
-        android:textColor="#fff"
-        android:textSize="20sp"></TextView>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="5dp"
+        android:columnCount="2"
+        android:background="#E0E0E0"
+        android:orientation="horizontal"
+        android:rowCount="6">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/tituloPropietario"
-        android:id="@+id/llProp">
 
+        <ImageView
+            android:id="@+id/ivTipoAnimal"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/notas" />
+
+
+        <TextView
+            android:id="@+id/tituloPropietario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="35dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="19dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/cajat"
+            android:padding="5dp"
+            android:text="Agregar Mascota"
+            android:textColor="#fff"
+            android:textSize="20sp"></TextView>
         <TextView
             android:id="@+id/titulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Datos propietario"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="2"
+            android:textStyle="bold"
+            android:textColor="#212121"
+            android:text="Datos del Propietario"
             android:textSize="15sp">
-
         </TextView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvNombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Nombre" />
-
-            <EditText
-                android:id="@+id/etNombre"
-                android:layout_marginLeft="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="" />
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginLeft="20dp"
+            android:text="Nombre:" />
+        <EditText
+            android:id="@+id/etNombre"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="" />
         <TextView
             android:id="@+id/tvTelefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Telefono" />
+            android:text="Teléfono:" />
 
         <EditText
             android:id="@+id/etTelefono"
@@ -80,14 +87,6 @@
             android:ems="10"
             android:inputType="number"
             android:text="" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/llProp">
 
         <TextView
             android:id="@+id/tituloMascota"
@@ -97,52 +96,76 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:text="Datos Mascota"
+            android:layout_columnSpan="2"
+            android:textStyle="bold"
+            android:textColor="#212121"
+            android:text="Datos de la Mascota"
             android:textSize="15sp">
         </TextView>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tvNombreMascota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Nombre Mascota" />
+            android:text="Nombre de la Mascota:" />
         <EditText
             android:id="@+id/etNombreMascota"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvTM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:text="Tipo de  Mascota:" />
+
         <Spinner
             android:id="@+id/sTipoMascota"
-            android:layout_width="match_parent"
+            android:layout_width="221dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:ems="10" />
+        <TextView
+            android:id="@+id/tvTG"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:text="Género:" />
 
         <Spinner
             android:id="@+id/sGenero"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="221dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
 
         <Button
             android:id="@+id/btnAgregarMascota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/btn_add"
+            android:layout_columnSpan="2"
             android:layout_marginLeft="30dp"
             android:padding="10dp"
             android:text="Agregar"
             android:textAllCaps="false"
             android:textColor="#fff" />
-    </LinearLayout>
+
+
+
+    </GridLayout>
+
 
 </RelativeLayout>
