--- a/app/src/main/res/layout/row_animal_adop.xml
+++ b/app/src/main/res/layout/row_animal_adop.xml
@@ -11,7 +11,7 @@
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/contenedor"
-        android:layout_width="297dp"
+        android:layout_width="wrap_content"
         android:layout_height="68dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="5dp"
@@ -29,37 +29,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/tvNamePA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:fontFamily="@font/coolveticarg"
                 android:paddingLeft="5dp"
                 android:text="Main Tittle"
-                android:fontFamily="@font/coolveticarg"
                 android:textColor="#fff"
-                android:layout_marginTop="1dp"
-                android:textSize="20sp"
-                android:id="@+id/tvNamePA"/>
+                android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/contactOwnerA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tvNamePA"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="3dp"
+                android:fontFamily="@font/coolveticarg"
                 android:paddingLeft="5dp"
                 android:text="Sub Tittle"
-                android:fontFamily="@font/coolveticarg"
-                android:layout_below="@+id/tvNamePA"
                 android:textColor="#fff"
-                android:layout_marginBottom="3dp"
-                android:textSize="15sp"
-                android:id="@+id/contactOwnerA"/>
+                android:textSize="15sp" />
 
             <ImageView
+                android:id="@+id/imagenGenderA"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginLeft="5dp"
                 android:layout_below="@+id/contactOwner"
-                android:src="@mipmap/ic_launcher"
-                android:id="@+id/imagenGenderA"/>
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="50dp"
+                android:src="@mipmap/ic_launcher" />
         </RelativeLayout>
     </androidx.gridlayout.widget.GridLayout>
 
