Imagen en formulario agregar

--- a/app/src/main/res/layout/activity_formulario_add_animal.xml
+++ b/app/src/main/res/layout/activity_formulario_add_animal.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/notas" />
+            app:srcCompat="@drawable/informemedico" />
 
 
         <TextView
